--- a/scraping/scraping01.ipynb
+++ b/scraping/scraping01.ipynb
@@ -43,29 +43,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "texts = []\n",
     "for link in links[:3]:\n",
     "    sleep(1)\n",
     "    soup = BeautifulSoup(requests.get(link).text, \"lxml\")\n",
-    "    texts.append(soup.find(\"div\", class_=\"news-contents\").text.strip())"
+    "    texts.append(soup.find(\"h4\", class_=\"news-title\").text.strip() + \" \" + soup.find(\"div\", class_=\"news-contents\").text.strip())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'神戸製鋼所神戸本社＝神戸市中央区脇浜海岸通２\\n\\n\\u3000神戸製鋼所は１５日、製品検査データを改ざんしていたアルミ・銅事業部門に、製造担当から独立した品質保証部を新設し、関連人事を発令した。検査データを長期間、複数の社員が改ざんしていた長府製造所（山口県下関市）など国内３拠点では、品質保証担当を製造部門から切り離した。一方、顧客対応に専念させるため工場長２人の職務を解いた。\\u3000いずれも、不正の原因究明と再発防止策の報告書をまとめた１０日付。新設した品質保証部には３人を充て、各拠点の監査や法令順守（コンプライアンス）教育を担う。部長には大安工場（三重県いなべ市）の主任部員が就いた。\\u3000大安工場長と長府製造所アルミ押出工場長は、担当部長に事実上降格した。納入先の自動車や航空機部品、鉄道車両メーカーなどとの対応に当たる。同社秘書広報部は「社内処分は外部委員会の調査結果を待って発令する。今回の異動は関係ない」としている。\\u3000同時に、大安工場を大安製造所に改称。サスペンション、アルミ鋳鍛の２工場を置いた。（高見雄樹）'"
+       "'神鋼子会社、新たにＪＩＳ違反\\u3000２度目で認証取り消し 神戸製鋼所は１５日、グループ会社コベルコマテリアル銅管秦野工場（神奈川県秦野市）の銅管製品で、工業製品の品質や安全性の基準として国が定める日本工業規格（ＪＩＳ）の法令違反があり、認証を取り消されたと発表した。今年発覚したデータ改ざん問題に絡み、この工場でのＪＩＳ違反は１０月に続き２回目。民間団体である国際標準化機構（ＩＳＯ）の品質管理に関する国際規格の認証も取り消された。\\u3000これらの規格は製品の性能や品質管理体制を保証し、取引の条件に指定する会社もある。認証の取り消しが広がれば製品の信用が低下し、販売に影響する可能性がある。\\u3000アルミニウム製品を製造する大安製造所（三重県いなべ市）では、ＩＳＯの認証が一時停止されたことも判明した。品質管理の体制が不十分と判断された。\\u3000ＪＩＳの認証機関は１５日までにグループ会社の神鋼メタルプロダクツ（北九州市）にも立ち入り審査を実施した。経済産業省は認証機関に対し、神戸製鋼の全認証工場への立ち入り審査を検討するよう指示している。\\u3000秦野工場は、規格を満たさない製品にＪＩＳマークを付けて出荷していた。新たにＪＩＳ認証を取り消されたのは樹脂で表面を覆った銅管で、給湯器の配管に使われる。１０月には、エアコンに使われる銅管のＪＩＳ認証が取り消された。\\u3000大安製造所は神戸製鋼のアルミ・銅事業部門で、今月１０日付で大安工場から名称が変わった。'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,6 +75,15 @@
    "source": [
     "texts[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
