--- a/scraping/scraping01.ipynb
+++ b/scraping/scraping01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -12,6 +12,7 @@
     "import re\n",
     "from time import sleep\n",
     "from bs4 import BeautifulSoup\n",
+    "from datetime import datetime\n",
     "\n",
     "domain = \"https://www.kobe-np.co.jp\"\n",
     "startpath = \"/news/keizai\""
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -44,36 +45,83 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-11-16T17:25:46.886021:(1/63)\n",
+      "2017-11-16T17:25:49.017940:(2/63)\n",
+      "2017-11-16T17:25:51.134682:(3/63)\n",
+      "2017-11-16T17:25:53.205729:(4/63)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-c41076ead265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mlink\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mlinks\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m     \u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m     \u001b[0msoup\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lxml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mtexts\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"h4\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"news-title\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\" \"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"div\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"news-contents\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "texts = []\n",
-    "for link in links[:3]:\n",
-    "    sleep(1)\n",
+    "count = 0\n",
+    "\n",
+    "for link in links:\n",
+    "    sleep(2)\n",
     "    soup = BeautifulSoup(requests.get(link).text, \"lxml\")\n",
-    "    texts.append(soup.find(\"h4\", class_=\"news-title\").text.strip() + \" \" + soup.find(\"div\", class_=\"news-contents\").text.strip())"
+    "    texts.append(soup.find(\"h4\", class_=\"news-title\").text.strip() + \" \" + soup.find(\"div\", class_=\"news-contents\").text.strip())\n",
+    "    \n",
+    "    count = count + 1\n",
+    "    print (datetime.now().isoformat()+\":(\"+str(count)+\"/\"+str(len(links))+\")\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'神鋼子会社、新たにＪＩＳ違反\\u3000２度目で認証取り消し 神戸製鋼所は１５日、グループ会社コベルコマテリアル銅管秦野工場（神奈川県秦野市）の銅管製品で、工業製品の品質や安全性の基準として国が定める日本工業規格（ＪＩＳ）の法令違反があり、認証を取り消されたと発表した。今年発覚したデータ改ざん問題に絡み、この工場でのＪＩＳ違反は１０月に続き２回目。民間団体である国際標準化機構（ＩＳＯ）の品質管理に関する国際規格の認証も取り消された。\\u3000これらの規格は製品の性能や品質管理体制を保証し、取引の条件に指定する会社もある。認証の取り消しが広がれば製品の信用が低下し、販売に影響する可能性がある。\\u3000アルミニウム製品を製造する大安製造所（三重県いなべ市）では、ＩＳＯの認証が一時停止されたことも判明した。品質管理の体制が不十分と判断された。\\u3000ＪＩＳの認証機関は１５日までにグループ会社の神鋼メタルプロダクツ（北九州市）にも立ち入り審査を実施した。経済産業省は認証機関に対し、神戸製鋼の全認証工場への立ち入り審査を検討するよう指示している。\\u3000秦野工場は、規格を満たさない製品にＪＩＳマークを付けて出荷していた。新たにＪＩＳ認証を取り消されたのは樹脂で表面を覆った銅管で、給湯器の配管に使われる。１０月には、エアコンに使われる銅管のＪＩＳ認証が取り消された。\\u3000大安製造所は神戸製鋼のアルミ・銅事業部門で、今月１０日付で大安工場から名称が変わった。'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqlite3: UNIQUE constraint failed: rawtext.id\n",
+      "sqlite3: UNIQUE constraint failed: rawtext.id\n",
+      "sqlite3: UNIQUE constraint failed: rawtext.id\n"
+     ]
     }
    ],
    "source": [
-    "texts[0]"
+    "import sqlite3\n",
+    "import hashlib\n",
+    "\n",
+    "dbname = \"text.db\"\n",
+    "dbcon = sqlite3.connect(dbname)\n",
+    "dbcur = dbcon.cursor()\n",
+    "\n",
+    "for text in texts:\n",
+    "    insert = \"INSERT INTO rawtext(id, source, time, rawtext) VALUES(?, ?, ?, ?)\"\n",
+    "\n",
+    "    id = hashlib.md5(text.encode(\"utf-8\")).hexdigest()\n",
+    "    source = \"神戸新聞（経済）\"\n",
+    "    time = datetime.now().isoformat()\n",
+    "    \n",
+    "    args = (id, source, time, text)\n",
+    "    \n",
+    "    try:\n",
+    "        dbcur.execute(insert, args)\n",
+    "    except sqlite3.Error as e:\n",
+    "        print('sqlite3:', e.args[0])\n",
+    "    \n",
+    "dbcon.commit()\n",
+    "dbcon.close()\n",
+    "print (datetime.now().isoformat()+\":db written\")"
    ]
   },
   {
