--- a/scraping/scraping03.ipynb
+++ b/scraping/scraping03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -14,6 +14,7 @@
     "from time import sleep\n",
     "from bs4 import BeautifulSoup\n",
     "from functools import reduce\n",
+    "from datetime import datetime\n",
     "\n",
     "domain = \"https://www.nikkei.com\"\n",
     "startpath = \"/business\""
@@ -32,84 +33,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.nikkei.com/article/DGXZZO21311050Q7A920C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23459800U7A111C1TI1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO22969540R01C17A1TBU000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23511580V11C17A1XQH000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23517160V11C17A1TJ1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23538600W7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23529120V11C17A1LKA000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23510190V11C17A1QM8000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512590V11C17A1TJ1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23538420W7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23400680T11C17A1XQD000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512890V11C17A1L91000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23527000V11C17A1LA0000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23505000V11C17A1X12000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23297920Z01C17A1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23450200U7A111C1X12000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23520560V11C17A1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23517150V11C17A1LX0000/',\n",
-       " 'https://www.nikkei.com/article/DGXZZO22545810R21C17A0000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23511310V11C17A1X30000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23394580T11C17A1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23516960V11C17A1X13000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23355060Q7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23406260T11C17A1X42000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23504970V11C17A1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23527450V11C17A1LA0000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23346950Q7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23501000V11C17A1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23456140U7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23502240V11C17A1QM8000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512680V11C17A1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23538380W7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23534920W7A111C1TI1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512240V11C17A1XA0000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23260770Y7A101C1TJ1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23513170V11C17A1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23412130T11C17A1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512330V11C17A1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23512700V11C17A1TI1000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23495750V11C17A1MM0000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23538610W7A111C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23466620U7A111C1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO22874370Q7A031C1000000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23505020V11C17A1TJ2000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23395770T11C17A1X12000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23434890T11C17A1XS5000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23529320V11C17A1LKA000/',\n",
-       " 'https://www.nikkei.com/article/DGXMZO23529000V11C17A1TI1000/']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "links = []\n",
     "for a in basesoup.find_all(\"a\", href=re.compile(\"^/article/.+/$\")):\n",
     "    links.append(domain + a.get(\"href\"))\n",
-    "links = list(set(links))\n",
-    "links"
+    "links = list(set(links))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017-11-16T17:19:02.534888:(1/47)\n",
+      "2017-11-16T17:19:05.292228:(2/47)\n",
+      "2017-11-16T17:19:08.140517:(3/47)\n",
+      "2017-11-16T17:19:10.976602:(4/47)\n",
+      "2017-11-16T17:19:13.798493:(5/47)\n",
+      "2017-11-16T17:19:16.652018:(6/47)\n",
+      "2017-11-16T17:19:19.667914:(7/47)\n",
+      "2017-11-16T17:19:22.359656:(8/47)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-e9d831a32d56>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapparent_encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0msoup\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lxml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mtitle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"meta\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mproperty\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"og:title\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"content\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\bs4\\__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, markup, features, builder, parse_only, from_encoding, exclude_encodings, **kwargs)\u001b[0m\n\u001b[0;32m    226\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    227\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 228\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_feed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    229\u001b[0m                 \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    230\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mParserRejectedMarkup\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\bs4\\__init__.py\u001b[0m in \u001b[0;36m_feed\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    287\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuilder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    288\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 289\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuilder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmarkup\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    290\u001b[0m         \u001b[1;31m# Close out any unfinished strings and close all the open tags.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    291\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mendData\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\bs4\\builder\\_lxml.py\u001b[0m in \u001b[0;36mfeed\u001b[1;34m(self, markup)\u001b[0m\n\u001b[0;32m    249\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparser_for\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mencoding\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    250\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeed\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmarkup\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 251\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    252\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mUnicodeDecodeError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLookupError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0metree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mParserError\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    253\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mParserRejectedMarkup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/parser.pxi\u001b[0m in \u001b[0;36mlxml.etree._FeedParser.close (src\\lxml\\etree.c:117165)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/parser.pxi\u001b[0m in \u001b[0;36mlxml.etree._FeedParser.close (src\\lxml\\etree.c:117002)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/parsertarget.pxi\u001b[0m in \u001b[0;36mlxml.etree._TargetParserContext._handleParseResult (src\\lxml\\etree.c:133309)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/parsertarget.pxi\u001b[0m in \u001b[0;36mlxml.etree._TargetParserContext._handleParseResult (src\\lxml\\etree.c:133055)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/etree.pyx\u001b[0m in \u001b[0;36mlxml.etree._ExceptionContext._raise_if_stored (src\\lxml\\etree.c:13244)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/saxparser.pxi\u001b[0m in \u001b[0;36mlxml.etree._handleSaxEndNoNs (src\\lxml\\etree.c:126583)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32msrc/lxml/parsertarget.pxi\u001b[0m in \u001b[0;36mlxml.etree._PythonSaxParserTarget._handleSaxEnd (src\\lxml\\etree.c:132223)\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\bs4\\builder\\_lxml.py\u001b[0m in \u001b[0;36mend\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    203\u001b[0m                     \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    204\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msoup\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhandle_endtag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnsprefix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 205\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnsmaps\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    206\u001b[0m             \u001b[1;31m# This tag, or one of its parents, introduced a namespace\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    207\u001b[0m             \u001b[1;31m# mapping, so pop it off the stack.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "texts = []\n",
+    "count = 0\n",
     "\n",
     "for link in links:\n",
     "    sleep(2)\n",
@@ -122,7 +100,10 @@
     "    main = soup.find(\"meta\", property=\"og:description\").get(\"content\").strip()\n",
     "    text = (title + \" \" + main).replace(\"\\u3000\",\" \").replace(\"（ニュースこう読む）\",\"\")\n",
     "\n",
-    "    texts.append(text)"
+    "    texts.append(text)\n",
+    "    \n",
+    "    count = count + 1\n",
+    "    print (datetime.now().isoformat()+\":(\"+str(count)+\"/\"+str(len(links))+\")\")"
    ]
   },
   {
@@ -188,7 +169,6 @@
    "source": [
     "import sqlite3\n",
     "import hashlib\n",
-    "from datetime import datetime\n",
     "\n",
     "dbname = \"text.db\"\n",
     "dbcon = sqlite3.connect(dbname)\n",
