--- a/scraping/scraping02.ipynb
+++ b/scraping/scraping02.ipynb
@@ -135,7 +135,8 @@
     "        print('sqlite3:', e.args[0])\n",
     "    \n",
     "dbcon.commit()\n",
-    "dbcon.close()"
+    "dbcon.close()\n",
+    "print (datetime.now().isoformat()+\":db written\")"
    ]
   }
  ],
