--- a/scraping/scraping03.ipynb
+++ b/scraping/scraping03.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "links = []\n",
@@ -178,7 +180,7 @@
     "    insert = \"INSERT INTO rawtext(id, source, time, rawtext) VALUES(?, ?, ?, ?)\"\n",
     "\n",
     "    id = hashlib.md5(text.encode(\"utf-8\")).hexdigest()\n",
-    "    source = \"日経（ビジネス）\"\n",
+    "    source = \"日経新聞（ビジネス）\"\n",
     "    time = datetime.now().isoformat()\n",
     "    \n",
     "    args = (id, source, time, text)\n",
@@ -189,7 +191,8 @@
     "        print('sqlite3:', e.args[0])\n",
     "    \n",
     "dbcon.commit()\n",
-    "dbcon.close()"
+    "dbcon.close()\n",
+    "print (datetime.now().isoformat()+\":db written\")"
    ]
   },
   {
@@ -255,9 +258,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "texts"
-   ]
+   "source": []
   }
  ],
  "metadata": {
