--- a/scraping/prepare_sql.ipynb
+++ b/scraping/prepare_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -13,27 +13,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "table rawtext already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-00086d146551>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdbcur\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdbcon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#dbcur.execute(\"DROP TABLE rawtext;\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdbcur\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"CREATE TABLE rawtext(id VARCHAR(36) NOT NULL PRIMARY KEY, source VARCHAR(20), time VARCHAR(20), rawtext VARCHAR(1024));\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mdbcon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mdbcon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mOperationalError\u001b[0m: table rawtext already exists"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dbname = \"text.db\"\n",
     "dbcon = sqlite3.connect(dbname)\n",
-    "dbcur = dbcon.cursor()\n",
-    "#dbcur.execute(\"DROP TABLE rawtext;\")\n",
-    "dbcur.execute(\"CREATE TABLE rawtext(id VARCHAR(36) NOT NULL PRIMARY KEY, source VARCHAR(20), time VARCHAR(20), rawtext VARCHAR(1024));\")\n",
+    "#dbcon.execute(\"DROP TABLE rawtext;\")\n",
+    "dbcon.execute(\"CREATE TABLE rawtext(id VARCHAR(36) NOT NULL PRIMARY KEY, source VARCHAR(20), time VARCHAR(20), rawtext VARCHAR(1024));\")\n",
+    "#dbcon.execute(\"ALTER TABLE rawtext ADD COLUMN separatedtext VARCHAR(1024);\")\n",
+    "dbcon.commit()\n",
+    "dbcon.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbname = \"text.db\"\n",
+    "dbcon = sqlite3.connect(dbname)\n",
+    "dbcon.execute(\"INSERT INTO text(id, source, time, rawtext) select id, source, time, rawtext from rawtext;\")\n",
+    "dbcon.commit()\n",
+    "dbcon.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dbname = \"text.db\"\n",
+    "dbcon = sqlite3.connect(dbname)\n",
+    "dbcon.execute(\"DROP TABLE rawtext;\")\n",
+    "dbcon.execute(\"ALTER TABLE text RENAME TO rawtext;\")\n",
     "dbcon.commit()\n",
     "dbcon.close()"
    ]
@@ -41,7 +56,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import pandas\n",
